<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.casbaherpapp.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.casbaherpapp.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.casbaherpapp.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.casbaherpapp.myapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_pvente"
        android:name="com.casbaherpapp.myapplication.ui.pvente.pvente"
        android:label="Les points de ventes"
        tools:layout="@layout/fragment_pvente" />
    <fragment
        android:id="@+id/nav_gventes"
        android:name="com.casbaherpapp.myapplication.ui.gventes.gvente"
        android:label="Gestion de ventes"
        tools:layout="@layout/fragment_gventes" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.casbaherpapp.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.casbaherpapp.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_paiement"
        android:name="com.casbaherpapp.myapplication.imad.Fragments.Paiement"
        android:label="Paiement"
        tools:layout="@layout/fragment_paiement" />
</navigation>